// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Tabs Component > renders correctly 1`] = `
<DocumentFragment>
  <div
    data-testid="tabs"
  >
    <div
      class="flex w-max gap-2"
      data-testid="tabs-list"
    >
      <div
        data-testid="tabs-trigger"
        value="tab1"
      >
        Tab 1
      </div>
      <div
        data-testid="tabs-trigger"
        value="tab2"
      >
        Tab 2
      </div>
    </div>
    <div
      data-testid="tabs-content"
      value="tab1"
    >
      <div
        data-testid="card"
      >
        <div
          data-testid="card-header"
        >
          <div
            data-testid="card-title"
          >
            Tab 1
          </div>
          <div
            data-testid="card-description"
          >
            Description for Tab 1
          </div>
        </div>
        <div
          class="space-y-2"
          data-testid="card-content"
        >
          <div
            data-testid="tabs-content"
            value="tab1"
          >
            <p>
              Content for Tab 1
            </p>
          </div>
        </div>
      </div>
    </div>
    <div
      data-testid="tabs-content"
      value="tab2"
    >
      <div
        data-testid="card"
      >
        <div
          data-testid="card-header"
        >
          <div
            data-testid="card-title"
          >
            Tab 2
          </div>
          <div
            data-testid="card-description"
          >
            Description for Tab 2
          </div>
        </div>
        <div
          class="space-y-2"
          data-testid="card-content"
        >
          <div
            data-testid="tabs-content"
            value="tab2"
          >
            <p>
              Content for Tab 2
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Tabs Component > renders with custom classNames 1`] = `
<DocumentFragment>
  <div
    class="custom-root"
    data-testid="tabs"
  >
    <div
      class="flex w-max gap-2 custom-tabs-list"
      data-testid="tabs-list"
    >
      <div
        class="custom-tabs-trigger"
        data-testid="tabs-trigger"
        value="tab1"
      >
        Tab 1 Trigger
      </div>
    </div>
    <div
      data-testid="tabs-content"
      value="tab1"
    >
      <div
        class="custom-card"
        data-testid="card"
      >
        <div
          class="custom-card-header"
          data-testid="card-header"
        >
          <div
            class="custom-card-title"
            data-testid="card-title"
          >
            Tab 1
          </div>
          <div
            class="custom-card-description"
            data-testid="card-description"
          >
            Description for Tab 1
          </div>
        </div>
        <div
          class="space-y-2 custom-card-content"
          data-testid="card-content"
        >
          <div
            data-testid="tabs-content"
            value="tab1"
          >
            <p>
              Content for Tab 1
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
